# meta-ads-mcp

./: README.md  SETUP.md  pyproject.toml
meta_ads_mcp/: server.py
